# drone_v1

./: CMakeLists.txt  README.md  test
c++_programs/: CMakeLists.txt  test.cpp
python_programs/: main.py
python_programs/myenv/: pyvenv.cfg
